--- a/project/style.css
+++ b/project/style.css
@@ -5,7 +5,7 @@
 
 body {
   text-align: center;
-  background: linear-gradient(to right, red, #fff);
+  background: linear-gradient(to right, rgb(255, 0, 0), #ffa9a9);
   overflow-x: hidden;
   padding: 3px 20px 20px 20px;
 }
